# bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  example.env  justfile  main.py  pyproject.toml
src/: app.py  utils.py
src/config/: __init__.py  main.py
src/errors/: __init__.py  main.py
src/logger/: __init__.py  main.py
src/middleware/: __init__.py  auth.py  content_type.py  cors.py  error.py  http_logging.py  request_id.py  request_size.py  validation.py
src/models/: __init__.py  ai_job.py  audit_event.py  auth.py  base.py  document.py  firm.py  research_request.py  user.py  workspace.py  workspace_member.py
src/repositories/: __init__.py  ai_job.py  audit_event.py  auth.py  base.py  document.py  firm.py  research_request.py  user.py  workspace.py  workspace_member.py
src/router/: health.py
src/router/v1/: __init__.py
src/schemas/: __init__.py  enum.py  request.py  response.py
src/services/: __init__.py  ai_job.py  audit.py  auth.py  document.py  rbac.py  research_request.py  workspace.py
src/storage/: __init__.py  documents.py
src/storage/documents/: __init__.py  client.py
src/storage/sqlite/: __init__.py  client.py
src/tests/: test_ai_job_service.py  test_document_service.py  test_research_request_service.py  test_workspace_service.py
