[project]
name = "ledger-bridge"
version = "0.1.0"
description = "A backend for an accounting research and workflow product."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.49",
]
